kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carta
  labels:
    name: carta
    environment: production
