kubernetes/test-files-loader.yaml.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-files-loader
  namespace: carta
spec:
  containers:
  - name: loader
    image: ubuntu
    command: [ "sleep", "infinity" ]
    volumeMounts:
    - name: test-files
      mountPath: /mnt/test-files
  volumes:
  - name: test-files
    persistentVolumeClaim:
      claimName: carta-test-files
  restartPolicy: Never
